# entity-store-test

./: Cargo.toml  build.rs
specs/: all_aggregates.toml  simple.toml
src/: lib.rs
