[package]
name = "entity_store_test"
description = "Test of entity_store_code_gen"
version = "0.1.0"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
enum_primitive = "0.1"
maplit = "0.1"
direction = "0.1"
cgmath = { version = "0.15", features = ["serde"] }

entity_store_code_gen = { git = "https://github.com/stevebob/entity-store-code-gen" }
entity_store_helper = { git = "https://github.com/stevebob/entity-store-helper" }

[build-dependencies]
entity_store_code_gen = { git = "https://github.com/stevebob/entity-store-code-gen" }
